test_suite/tests/ui/string/derive/invalid_char.stderr
error: Unexpected `!`
 --> tests/ui/string/derive/invalid_char.rs:4:17
  |
4 | #[derive(Debug, !)]
  |                 ^
